--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,3 +4,21 @@ body {
 
 form {
   padding-top: 50px; }
+
+.menu {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #000;
+  font-size: x-large;
+  background: #f4cb42;
+  clear: both;
+  text-align: center;
+  margin-bottom: 20px; }
+
+button {
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none; }
