--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 body {
   font: 100% Helvetica, sans-serif;
-  color: #333; }
+  color: #333;
+  padding-top: 130px; }
 
 form {
   padding-top: 50px; }
@@ -10,7 +11,7 @@ form {
   padding-bottom: 20px;
   color: #000;
   font-size: x-large;
-  background: #f4cb42;
+  background: #42a9f4;
   clear: both;
   text-align: center;
   margin-bottom: 20px; }
@@ -22,3 +23,13 @@ button {
   cursor: pointer;
   overflow: hidden;
   outline: none; }
+
+.nav-bar {
+  text-align: center;
+  font-size: xx-large; }
+
+.placeholder {
+  background: #42a9f4;
+  height: 500px;
+  text-align: center;
+  font-size: 50px; }
