--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,12 +6,15 @@ body {
 form {
   padding-top: 50px; }
 
+a:hover {
+  text-decoration: none; }
+
 .menu {
   padding-top: 20px;
   padding-bottom: 20px;
   color: #000;
   font-size: x-large;
-  background: #42a9f4;
+  background: #42A9F4;
   clear: both;
   text-align: center;
   margin-bottom: 20px; }
@@ -29,10 +32,16 @@ button {
   font-size: xx-large; }
 
 .placeholder {
-  background: #42a9f4;
+  background: #42A9F4;
   height: 500px;
   text-align: center;
   font-size: 50px; }
 
 .navbar-right {
   padding-right: 20px; }
+
+canvas {
+  border: 1px solid black; }
+
+.center {
+  text-align: center; }
